--- a/ica/ica5/ica5-style.css
+++ b/ica/ica5/ica5-style.css
@@ -39,3 +39,20 @@ h1 {
 }
 
 /* Your CSS below here */
+
+article {
+  background:
+    linear-gradient(to bottom, rgba(0,0,0,0.2) 0%, rgba(0,0,0,0) 20%, rgba(0,0,0,0) 80%, rgba(0,0,0,0.2) 100%),
+    url('top-image.png') no-repeat top center,
+    url('bottom-image.png') no-repeat bottom center;
+  background-size: cover;
+  background-color: white;
+  border-top: 1mm solid darkred;
+  border-bottom: 1mm solid darkred;
+}
+
+h1 {
+  background: url('logo.png') no-repeat center center;
+  background-size: cover;
+  filter: drop-shadow(2px 2px 4px rgba(0,0,0,0.5));
+}
