--- a/ica/ica6/ica6-part2.css
+++ b/ica/ica6/ica6-part2.css
@@ -64,3 +64,29 @@ body{
 #no9{
 
 }
+
+/* FLEX row ordering */
+#flex-parent {
+  display: flex;
+}
+#flex-child1 {
+  order: 3;
+}
+#flex-child2 {
+  order: 4;
+}
+#flex-child3 {
+  order: 2;
+}
+#flex-child4 {
+  order: 1;
+}
+
+/* GRID keypad layout */
+#grid-parent {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  width: 200px;
+  gap: 5px;
+}
+
