--- a/wa7/wa7.css
+++ b/wa7/wa7.css
@@ -1,36 +1,28 @@
-body{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: blanchedalmond;
-}
-nav{
-    height: 50vh;
-    display:flex;
-    flex-direction: row;
-    justify-content: space-between;
-    height:20px;
-    background-color: blueviolet;
-}
-nav a{
-    width:10vw;
-    text-align: center;
-    text-decoration: none;
-    color:black;
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #F9F4EF;
+  color: #3D2B3D;
+  font-family: 'Poppins', sans-serif;
 }
 
-
-img{
-    width:30vw;
-    height: 30vh;
+nav {
+  background-color: #C34A7E;
+  height: 50vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  height: 20px;
 }
 
-#red-ball{
-    background-color: crimson;
-    width: 20px;
-    height:20px;
-    border-radius: 50%;
-    position: absolute;
-    left:5vw;
-    top:0;
+#red-ball {
+  background-color: #D9A441;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  position: absolute;
+  left: 5vw;
+  top: 0;
+  animation: bounce 3s infinite ease-in-out;
 }
