--- a/wa7/wa7.css
+++ b/wa7/wa7.css
@@ -8,12 +8,27 @@ body {
 }
 
 nav {
-  background-color: #C34A7E;
-  height: 50vh;
+  height: 10vh;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  height: 20px;
+  align-items: center;
+  background-color: #C34A7E; /* magenta pink from my color palette */
+  padding: 0 5vw;
+}
+
+nav a {
+  width: 10vw;
+  text-align: center;
+  text-decoration: none;
+  color: #F9F4EF; /* Soft Cream for contrast */
+  font-weight: bold;
+  font-size: 1.1rem;
+  transition: color 0.3s ease;
+}
+
+nav a:hover {
+  color: white;
 }
 
 #red-ball {
