--- a/wa7/wa7.css
+++ b/wa7/wa7.css
@@ -41,3 +41,12 @@ nav a:hover {
   top: 0;
   animation: bounce 3s infinite ease-in-out;
 }
+
+@keyframes bounce {
+  0%, 100% {
+    top: 0;
+  }
+  50% {
+    top: 80vh;
+  }
+}
