--- a/wa7/wa7.css
+++ b/wa7/wa7.css
@@ -33,11 +33,11 @@ nav a:hover {
 
 #red-ball {
   background-color: #D9A441;
-  width: 20px;
-  height: 20px;
+  width: 30px;
+  height: 30px;
   border-radius: 50%;
   position: absolute;
-  left: 5vw;
+  left: 45vw;     /* center-ish */
   top: 0;
   animation: bounce 3s infinite ease-in-out;
 }
