--- a/wa/wa11.css
+++ b/wa/wa11.css
@@ -12,13 +12,13 @@ h1 {
 
 /* main image display */
 .displayed-img {
-  max-width: 500px;
-  max-height: 500px;
   width: 100%;
+  max-width: 500px;
   height: auto;
   border: 4px solid pink;
   border-radius: 10px;
-  margin-bottom: 20px;
+  display: block;
+  margin: 0 auto 20px auto;
 }
 
 /* thumbnail container */
